# kart

./: .ackrc  .cmake-format.json  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  Brewfile  CHANGELOG.md  CITATION  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTION_IMPROVEMENTS.md  CONTRIBUTION_SUMMARY.md  COPYING  DATASETS_v2.md  Dockerfile  Dockerfile.dev  HOWTO-RELEASE.md  HOW_TO_SUBMIT.md  MANIFEST.in  Makefile  README.md  Vagrantfile  kart.spec  kx-noms.go  kxgit-docker.sh  kxgit.py  makefile.vc  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-test.in  (+6 more)
.buildkite/: build-docker.sh  docker-compose.yml  pipeline.yml  run-tests.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-common.yml  (+10 more)
.hooks/: kx-ruff.py
HomebrewFormula/: kxgit.rb  sno.rb  snowdrop.rb
cli_helper/: CMakeLists.txt  cJSON.c  kart.c  kart.h
cmake/: CCache.cmake  KartBundle.cmake  KartLibkart.cmake  KartPy.cmake  PyCreateVirtualEnvironment.cmake  PythonGetABIInfo.cmake  cpack_project_config.cmake  exe_symlink_or_bat.cmake  extract_vendor_archive.cmake  link.cmake  macos_get_deployment.sh  str_replace.cmake  win_codesign.cmake
docs/: ANNOTATIONS.md  APPROXIMATED_TYPES.md  BUILDING_GIT_FOR_KART.md  DATASETS_v1.md  DATASETS_v2.md  DATASETS_v3.md  GPKG_WC.md  MYSQL_WC.md  Makefile  POSTGIS_WC.md  README.md  SPATIAL_FILTERING.md  SQL_SERVER_WC.md  conf.py  index.rst  sqlite3-idmap.txt  sqlite3-ondisk.txt
kart/: VERSION  __init__.py  add_dataset.py  apply.py  base_dataset.py  base_diff_writer.py  branch.py  checkout.py  cli.py  cli_util.py  clone.py  commit.py  completion.py  completion_shared.py  conflicts.py  conflicts_util.py  conflicts_writer.py  context.py  core.py  create_workingcopy.py  crs_util.py  data.py  dataset2.py  dataset2_paths.py  dataset3.py  dataset3_paths.py  dataset_mixins.py  dataset_util.py  decorators.py  diagnostics.py  diff-view.html  diff.py  diff_estimation.py  diff_format.py  diff_output.py  diff_structs.py  diff_util.py  docs.py  exceptions.py  exec.py  (+62 more)
libkart/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  build.sh
libkart/bindings/python/: CMakeLists.txt  libkart.pyx  libkart_.pxd  setup.py
libkart/include/: CMakeLists.txt  kart.hpp  libkart.h
libkart/include/kart/: blob_iterator.hpp  dataset3.hpp  errors.hpp  object.hpp  object_type.hpp  oid.hpp  ownership.hpp  repo.hpp  structure.hpp  tree_walker.hpp  util.hpp
libkart/src/: CMakeLists.txt  capi.rs  dataset.rs  error.rs  feature.rs  gpkg.rs  handle.rs  kart.cpp  lib.rs  repo.rs  tile.rs
libkart/src/kart/: blob_iterator.cpp  dataset3.cpp  object.cpp  oid.cpp  repo.cpp  structure.cpp  tree_walker.cpp
libkart/tests_py/: golden_check.py
requirements/: CMakeLists.txt  README.md  build.apt  dev.in  dev.txt  docs.in  docs.txt  licenses.ini  requirements.in  requirements.txt  run.apt  test.in  test.txt  vendor-wheels.txt
scripts/: doc_gen.py
sno/: VERSION  __init__.py  apply.py  base_dataset.py  branch.py  checkout.py  cli.py  cli_util.py  clone.py  commit.py  conflicts.py  context.py  core.py  crs_util.py  data.py  dataset1.py  dataset2.py  dataset2_gpkg.py  db_util.py  diff-view.html  diff.py  diff_estimation.py  diff_output.py  diff_structs.py  exceptions.py  exec.py  fast_import.py  filter_util.py  fsck.py  geometry.py  git_util.py  gpkg.py  gpkg_adapter.py  import_source.py  init.py  log.py  merge.py  merge_util.py  meta.py  meta_items.py  (+28 more)
snowdrop/: checkout.py  cli.py  clone.py  commit.py  core.py  diff.py  fsck.py  gpkg.py  init.py  main.py  merge.py  pull.py  query.py  status.py  structure.py  working_copy.py
tests/: conftest.py  memory_repo.py  test_add_dataset.py  test_annotations.py  test_apply.py  test_attachment_edge_cases.py  test_branch.py  test_checkout.py  test_cli.py  test_commit.py  test_completion.py  test_conflicts.py  test_core.py  test_crs_util.py  test_data.py  test_dataset2.py  test_dataset3.py  test_diagnostics.py  test_diff.py  test_diff_feature_count.py  test_docs.py  test_e2e.py  test_e2e_sno.py  test_esri_rest_import_source.py  test_export.py  test_fsck.py  test_geometry.py  test_gpkg.py  test_gpkg_adapter.py  test_help.py  test_import_from_postgres.py  test_import_source.py  test_init.py  test_integration.py  test_kart.py  test_key_filters.py  test_log.py  test_merge.py  test_meta.py  test_meta_helpers.py  (+35 more)
vcpkg-vendor/: CMakeLists.txt  cmake-vcpkg-build-linux.sh  fix_vendor_libs.py  gdal__setup.py.patch  osx-setup.cmake  vcpkg-toolchain-setup.cmake  vcpkg.json
vcpkg-vendor/cmake/: FindGo.cmake  FindRust.cmake  copy_1.cmake  debug_helpers.cmake
vcpkg-vendor/cmake/template/: _kart_env.py.in
vcpkg-vendor/vcpkg-overlay-ports/gdal/: OVERLAY.md  fix-find-spatialite.patch  portfile.cmake  vcpkg.json
vcpkg-vendor/vcpkg-overlay-ports/libgit2/: fix-configcmake.patch  portfile.cmake
vcpkg-vendor/vcpkg-overlay-ports/libspatialindex/: portfile.cmake  static.patch  vcpkg.json
vcpkg-vendor/vcpkg-overlay-ports/libspatialite/: fix-makefile-mod.patch  ok-load-permanently.patch  portfile.cmake
vcpkg-vendor/vcpkg-overlay-ports/openssl/unix/: CMakeLists.txt
vcpkg-vendor/vcpkg-overlay-ports/openssl/windows/: portfile.cmake
vcpkg-vendor/vcpkg-overlay-ports/pcre/: OVERLAY.md  portfile.cmake
vcpkg-vendor/vcpkg-overlay-ports/pdal/: OVERLAY.md  arbiter-aws-no-sign-request.patch  arbiter-aws-virtual-hosting-var.patch  cmake-project-include.cmake  dependencies.diff  fix-dependency.patch  fix-find-library-suffix.patch  gdal-3.11.diff  portfile.cmake  spz-zlib.diff  usage  vcpkg.json
vcpkg-vendor/vcpkg-overlay-ports/pkgconf/: OVERLAY.md  portfile.cmake
vcpkg-vendor/vcpkg-overlay-ports/rapidxml/: 0001-fix-for-a-bug-in-gcc-that-won-t-let-rapidxml-compile.patch  OVERLAY.md  portfile.cmake
vcpkg-vendor/vcpkg-overlay-triplets/: arm64-linux.cmake  arm64-osx.cmake  x64-linux.cmake  x64-osx.cmake  x64-windows.cmake
(+303 files in other folders)
